// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renderToElement should do initial and subscription render into node 1`] = `
"<html>

<head>
  <style type=\\"text/css\\">
    ._p2crlx {
      background-color: red
    }

    ._t2jx0m {
      color: blue
    }
  </style>
</head>

<body></body>

</html>"
`;

exports[`renderToElement should do initial and subscription render into node 2`] = `
"<html>

<head>
  <style type=\\"text/css\\">
    @-webkit-keyframes _2ahmm2 {
      0% {
        color: yellow
      }
      100% {
        color: orange
      }
    }

    @-moz-keyframes _2ahmm2 {
      0% {
        color: yellow
      }
      100% {
        color: orange
      }
    }

    @keyframes _2ahmm2 {
      0% {
        color: yellow
      }
      100% {
        color: orange
      }
    }

    ._p2crlx {
      background-color: red
    }

    ._t2jx0m {
      color: blue
    }
  </style>
</head>

<body></body>

</html>"
`;
